--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -2,7 +2,7 @@
 
 body {
   font-family: $font-main;
-  // background-color: $dark;
+  background-color: $dark;
   color: $white;
   font-size: 16px;
 }
@@ -18,5 +18,30 @@ a {
 .container {
   margin: 0 auto;
   padding: 0 15px;
-  width: 1140px;
+  max-width: 1140px;
+  &--benefits {
+    max-width: 824px;
+  }
+}
+
+.text-right {
+  text-align: right;
+}
+
+.visually-hidden {
+  /* Contain text within 1px box */
+  height: 1px;
+  overflow: hidden;
+  width: 1px;
+
+  /* Keep the layout */
+  position: absolute;
+
+  /* Remove any visible trace (e.g. background color) */
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%); /* browsers in the future */
+
+  /* Prevent the screen reader to skip spaces between words */
+  white-space: nowrap;
 }
