--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -2,13 +2,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
-  text-align: center;
   padding-top: 30px;
   padding-bottom: 74px;
   min-height: 840px;
-  background: linear-gradient(#242b33 11.98%, rgba(45, 52, 60, 0.38) 51.04%, #242b33 92.19%),
-    url('../image/header/header-bg.jpg');
+  background: linear-gradient(180deg, #242b33 11.98%, rgba(45, 52, 60, 0.38) 51.04%, #242b33 92.19%),
+    url('./../image/header/header-bg.jpg');
 }
 
 .header__top-row {
@@ -28,8 +26,6 @@
 }
 
 .header__footer {
-}
-.header__contacts {
   padding-left: 3px;
   display: grid;
   grid-template-columns: 1fr 1fr;
