--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  text-align: center;
   padding-top: 30px;
   padding-bottom: 74px;
   min-height: 840px;
