--- a/styles/main.css
+++ b/styles/main.css
@@ -151,6 +151,19 @@ a:hover {
   white-space: nowrap;
 }
 
+.none {
+  display: none !important;
+}
+
+.title-2 {
+  padding-left: 1px;
+  color: #d4c17f;
+  font-family: "Playfair Display", serif;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 34px;
+}
+
 .header {
   display: flex;
   flex-direction: column;
@@ -266,4 +279,67 @@ a:hover {
   font-size: 20px;
   font-weight: 300;
   line-height: 1.35;
+}
+
+.departments__title {
+  margin-bottom: 95px;
+}
+
+.apartmemt__cards {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
+}
+
+.card {
+  overflow: hidden;
+  position: relative;
+  display: inline-block;
+}
+.card::before {
+  content: "";
+  position: absolute;
+  z-index: 6;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(180deg, rgba(36, 43, 51, 0) 0%, #242b33 100%);
+}
+.card::after {
+  opacity: 0;
+  content: "";
+  position: absolute;
+  z-index: 7;
+  left: 15px;
+  top: 15px;
+  right: 15px;
+  bottom: 15px;
+  border: 3px double #d4c17f;
+  transition: opacity 0.2s ease-in;
+}
+.card:hover::after {
+  opacity: 1;
+}
+
+.card__img {
+  position: relative;
+  z-index: 5;
+  transition: all 0.2s ease-in;
+}
+
+.card:hover .card__img {
+  transform: scale(1.1);
+  filter: contrast(110%) brightness(1.2) saturate(1.2);
+}
+
+.card__title {
+  position: absolute;
+  z-index: 8;
+  left: 50px;
+  right: 20px;
+  bottom: 44px;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: normal;
 }/*# sourceMappingURL=main.css.map */
