--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,3 +10,5 @@
 @import './blocks/benefits';
 @import './blocks/departments';
 @import './blocks/card';
+@import './blocks/cta';
+@import './blocks/form';
