--- a/styles/main.css
+++ b/styles/main.css
@@ -156,7 +156,6 @@ a:hover {
 }
 
 .title-2 {
-  padding-left: 1px;
   color: #d4c17f;
   font-family: "Playfair Display", serif;
   font-size: 36px;
@@ -283,6 +282,7 @@ a:hover {
 
 .departments__title {
   margin-bottom: 95px;
+  margin-left: 1px;
 }
 
 .apartmemt__cards {
@@ -351,7 +351,6 @@ a:hover {
 
 .cta__title {
   margin-top: 7px;
-  margin-left: -1px;
   margin-bottom: 24px;
 }
 
@@ -455,4 +454,18 @@ a:hover {
 .video__link:hover .video__icon {
   transform: translate(-50%, -50%) scale(1.2);
   filter: saturate(1.5);
+}
+
+.section-map {
+  padding: 180px 0;
+}
+
+.section-map__title {
+  padding-top: 7px;
+  margin-bottom: 94px;
+}
+
+.map {
+  height: 358px;
+  background-color: #626262;
 }/*# sourceMappingURL=main.css.map */
