--- a/styles/main.css
+++ b/styles/main.css
@@ -468,4 +468,20 @@ a:hover {
 .map {
   height: 358px;
   background-color: #626262;
+}
+
+.feedback {
+  padding-bottom: 180px;
+}
+
+.feedback__title {
+  padding-top: 10px;
+  margin-bottom: 45px;
+}
+
+.feedback__form {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+  align-items: center;
 }/*# sourceMappingURL=main.css.map */
