--- a/scss/blocks/_nav.scss
+++ b/scss/blocks/_nav.scss
@@ -2,7 +2,7 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 16px;
-  letter-spacing: 0.56px;
+  letter-spacing: 0.05em;
 }
 
 .nav__list {
