--- a/styles/main.css
+++ b/styles/main.css
@@ -163,6 +163,11 @@ a:hover {
   line-height: 34px;
 }
 
+.link-bold {
+  color: #d4c17f;
+  font-weight: 700;
+}
+
 .header {
   display: flex;
   flex-direction: column;
@@ -202,7 +207,7 @@ a:hover {
   font-size: 14px;
   font-weight: 400;
   line-height: 16px;
-  letter-spacing: 0.56px;
+  letter-spacing: 0.05em;
 }
 
 .nav__list {
@@ -483,5 +488,40 @@ a:hover {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 30px;
+  align-items: center;
+}
+
+.footer {
+  background-color: #2d343c;
+  padding-top: 72px;
+  padding-bottom: 51px;
+  font-size: 14px;
+  letter-spacing: 0.05rem;
+}
+
+.footer__grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 30px;
+}
+
+.footer__logo {
+  margin-top: -12px;
+}
+
+.footer__address {
+  display: grid;
+  gap: 20px;
+}
+
+.footer__nav-list {
+  display: grid;
+  gap: 15px;
+}
+
+.footer__socials {
+  display: flex;
+  -moz-column-gap: 22px;
+       column-gap: 22px;
   align-items: center;
 }/*# sourceMappingURL=main.css.map */
