--- a/scss/blocks/_video.scss
+++ b/scss/blocks/_video.scss
@@ -1,5 +1,13 @@
 .video {
   text-align: center;
+  position: relative;
+  &::after {
+    content: 'IV';
+    top: 40px;
+    left: calc(50% + 550px);
+    transform: translate(-50%, 0);
+    @include decorNumber;
+  }
 }
 .video__link {
   position: relative;
