--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 // Base
 @import './base/reset';
 @import './base/vars';
+@import './base/mixins';
 @import './base/base';
 
 // Blocks
@@ -8,7 +9,7 @@
 @import './blocks/nav';
 @import './blocks/info';
 @import './blocks/benefits';
-@import './blocks/departments';
+@import './blocks/apartments';
 @import './blocks/card';
 @import './blocks/cta';
 @import './blocks/form';
