--- a/styles/main.css
+++ b/styles/main.css
@@ -207,7 +207,7 @@ a:hover {
   font-size: 14px;
   font-weight: 400;
   line-height: 16px;
-  letter-spacing: 0.05em;
+  letter-spacing: 0.045em;
 }
 
 .nav__list {
@@ -242,7 +242,20 @@ a:hover {
 }
 
 .benefits {
+  position: relative;
   padding: 120px 0;
+}
+.benefits::after {
+  content: "II";
+  top: -28px;
+  left: calc(50% + 550px);
+  transform: translate(-50%, 0);
+  position: absolute;
+  z-index: -1;
+  opacity: 0.02;
+  font-family: "Playfair Display", serif;
+  font-size: 400px;
+  font-weight: 700;
 }
 
 .benefits__row {
@@ -285,7 +298,23 @@ a:hover {
   line-height: 1.35;
 }
 
-.departments__title {
+.apartments {
+  position: relative;
+}
+.apartments::before {
+  content: "III";
+  top: -75px;
+  right: calc(50% + 555px);
+  transform: translate(50%, 0);
+  position: absolute;
+  z-index: -1;
+  opacity: 0.02;
+  font-family: "Playfair Display", serif;
+  font-size: 400px;
+  font-weight: 700;
+}
+
+.apartments__title {
   margin-bottom: 95px;
   margin-left: 1px;
 }
@@ -427,6 +456,19 @@ a:hover {
 
 .video {
   text-align: center;
+  position: relative;
+}
+.video::after {
+  content: "IV";
+  top: 40px;
+  left: calc(50% + 550px);
+  transform: translate(-50%, 0);
+  position: absolute;
+  z-index: -1;
+  opacity: 0.02;
+  font-family: "Playfair Display", serif;
+  font-size: 400px;
+  font-weight: 700;
 }
 
 .video__link {
@@ -462,7 +504,20 @@ a:hover {
 }
 
 .section-map {
+  position: relative;
   padding: 180px 0;
+}
+.section-map::before {
+  content: "V";
+  top: 110px;
+  right: calc(50% + 560px);
+  transform: translate(50%, 0);
+  position: absolute;
+  z-index: -1;
+  opacity: 0.02;
+  font-family: "Playfair Display", serif;
+  font-size: 400px;
+  font-weight: 700;
 }
 
 .section-map__title {
@@ -480,7 +535,7 @@ a:hover {
 }
 
 .feedback__title {
-  padding-top: 10px;
+  padding-top: 8px;
   margin-bottom: 45px;
 }
 
@@ -496,7 +551,7 @@ a:hover {
   padding-top: 72px;
   padding-bottom: 51px;
   font-size: 14px;
-  letter-spacing: 0.05rem;
+  letter-spacing: 0.04rem;
 }
 
 .footer__grid {
