--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -6,3 +6,9 @@
   font-size: 400px;
   font-weight: 700;
 }
+
+@mixin mediaTabled {
+  @media screen and (max-width: $tabled) {
+    @content;
+  }
+}
