--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -8,12 +8,30 @@
   min-height: 840px;
   background: linear-gradient(180deg, #242b33 11.98%, rgba(45, 52, 60, 0.38) 51.04%, #242b33 92.19%),
     url('./../image/header/header-bg.jpg');
+
+  @include mediaTabled {
+    min-height: unset;
+    row-gap: 50px;
+  }
 }
 
 .header__top-row {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.header__nav {
+  @include mediaTabled {
+    display: none;
+  }
+}
+
+.header__nav-btn {
+  display: none;
+  @include mediaTabled {
+    display: block;
+  }
 }
 
 .header__title {
@@ -24,6 +42,9 @@
   font-weight: 700;
   line-height: normal;
   margin-bottom: 81px;
+  @include mediaTabled {
+    font-size: 32px;
+  }
 }
 
 .header__footer {
@@ -32,4 +53,10 @@
   grid-template-columns: 1fr 1fr;
   gap: 98px;
   text-align: left;
+  @include mediaTabled {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 30px;
+  }
 }
