--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -21,6 +21,37 @@
   align-items: center;
 }
 
+.header__top-row--mobile {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  left: 0;
+  height: 100%;
+  z-index: 99;
+  background-color: $dark;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  row-gap: 60px;
+  padding: 40px 0;
+  .header__nav {
+    display: block;
+  }
+
+  .nav__list {
+    flex-direction: column;
+    align-items: center;
+    row-gap: 30px;
+  }
+
+  .header__nav-btn {
+    position: fixed;
+    top: 50px;
+    right: 15px;
+  }
+}
+
 .header__nav {
   @include mediaTabled {
     display: none;
