--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 // Blocks
 @import './blocks/header';
 @import './blocks/nav';
+@import './blocks/nav-icon';
 @import './blocks/info';
 @import './blocks/benefits';
 @import './blocks/apartments';
