--- a/styles/main.css
+++ b/styles/main.css
@@ -180,7 +180,8 @@ a:hover {
   padding-top: 30px;
   padding-bottom: 74px;
   min-height: 840px;
-  background: linear-gradient(180deg, #242b33 11.98%, rgba(45, 52, 60, 0.38) 51.04%, #242b33 92.19%), url("./../image/header/header-bg.jpg");
+  background: linear-gradient(180deg, #242b33 11.98%, rgba(45, 52, 60, 0.38) 51.04%, #242b33 92.19%), url("./../image/header/header-bg.jpg") no-repeat;
+  background-position: center;
 }
 @media screen and (max-width: 960px) {
   .header {
