--- a/scss/blocks/_apartments.scss
+++ b/scss/blocks/_apartments.scss
@@ -11,11 +11,16 @@
 .apartments__title {
   margin-bottom: 95px;
   margin-left: 1px;
+  @include mediaTabled {
+    margin-bottom: 45px;
+  }
 }
 
 .apartmemt__cards {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  // grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
   gap: 30px;
+  @include mediaTabled {
+    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+  }
 }
