--- a/scss/blocks/_card.scss
+++ b/scss/blocks/_card.scss
@@ -48,4 +48,9 @@
   font-size: 24px;
   font-weight: 400;
   line-height: normal;
+  @include mediaTabled {
+    font-size: 20px;
+    left: 30px;
+    bottom: 25px;
+  }
 }
