mobile adaptation of the cta

--- a/scss/blocks/_cta.scss
+++ b/scss/blocks/_cta.scss
@@ -3,6 +3,9 @@
   background: linear-gradient(180deg, $dark 10.42%, rgba(36, 43, 51, 0) 50.52%, $dark 90.1%),
     linear-gradient(0deg, rgba(36, 43, 51, 0.9) 0%, rgba(36, 43, 51, 0.9) 100%), url('./../image/cta/cta-bg.jpg'),
     #c4c4c4;
+  @include mediaTabled {
+    padding: 60px 0;
+  }
 }
 .cta__title {
   margin-top: 7px;
@@ -12,11 +15,17 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 30px;
+  @include mediaTabled {
+    grid-template-columns: 1fr;
+  }
 }
 .cta__text {
   line-height: 1.5;
   p + p {
     margin-top: 1em;
+  }
+  @include mediaTabled {
+    font-size: 14px;
   }
 }
 .cta__form {
@@ -24,4 +33,7 @@
   align-items: center;
   grid-template-columns: 1fr 1fr;
   gap: 35px 30px;
+  @include mediaTabled {
+    grid-template-columns: 1fr;
+  }
 }
