--- a/styles/main.css
+++ b/styles/main.css
@@ -563,6 +563,11 @@ a:hover {
   padding: 180px 0;
   background: linear-gradient(180deg, #242b33 10.42%, rgba(36, 43, 51, 0) 50.52%, #242b33 90.1%), linear-gradient(0deg, rgba(36, 43, 51, 0.9) 0%, rgba(36, 43, 51, 0.9) 100%), url("./../image/cta/cta-bg.jpg"), #c4c4c4;
 }
+@media screen and (max-width: 960px) {
+  .cta {
+    padding: 60px 0;
+  }
+}
 
 .cta__title {
   margin-top: 7px;
@@ -574,6 +579,11 @@ a:hover {
   grid-template-columns: 1fr 1fr;
   gap: 30px;
 }
+@media screen and (max-width: 960px) {
+  .cta__wrapper {
+    grid-template-columns: 1fr;
+  }
+}
 
 .cta__text {
   line-height: 1.5;
@@ -581,12 +591,22 @@ a:hover {
 .cta__text p + p {
   margin-top: 1em;
 }
+@media screen and (max-width: 960px) {
+  .cta__text {
+    font-size: 14px;
+  }
+}
 
 .cta__form {
   display: grid;
   align-items: center;
   grid-template-columns: 1fr 1fr;
   gap: 35px 30px;
+}
+@media screen and (max-width: 960px) {
+  .cta__form {
+    grid-template-columns: 1fr;
+  }
 }
 
 .form__input {
@@ -618,6 +638,11 @@ a:hover {
   font-weight: 400;
   line-height: 1.23; /* 123.077% */
   text-align: center;
+}
+@media screen and (max-width: 960px) {
+  .form__privacy--bottom {
+    grid-row: 4/5;
+  }
 }
 
 .form__btn {
