--- a/scss/blocks/_form.scss
+++ b/scss/blocks/_form.scss
@@ -27,6 +27,11 @@
   font-weight: 400;
   line-height: 1.23; /* 123.077% */
   text-align: center;
+  &--bottom {
+    @include mediaTabled {
+      grid-row: 4/5;
+    }
+  }
 }
 .form__btn {
   height: 50px;
