mobile adaptation of the video, section-map, feedback, footer

--- a/scss/blocks/_section-map.scss
+++ b/scss/blocks/_section-map.scss
@@ -8,10 +8,16 @@
     transform: translate(50%, 0);
     @include decorNumber;
   }
+  @include mediaTabled {
+    padding: 60px 0;
+  }
 }
 .section-map__title {
   padding-top: 7px;
   margin-bottom: 94px;
+  @include mediaTabled {
+    margin-bottom: 40px;
+  }
 }
 .map {
   height: 358px;
