--- a/scss/blocks/_feedback.scss
+++ b/scss/blocks/_feedback.scss
@@ -1,10 +1,16 @@
 .feedback {
   padding-bottom: 180px;
+  @include mediaTabled {
+    padding-bottom: 60px;
+  }
 }
 
 .feedback__title {
   padding-top: 8px;
   margin-bottom: 45px;
+  @include mediaTabled {
+    margin-bottom: 25px;
+  }
 }
 
 .feedback__form {
@@ -12,4 +18,7 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 30px;
   align-items: center;
+  @include mediaTabled {
+    grid-template-columns: 1fr;
+  }
 }
