--- a/scss/blocks/_video.scss
+++ b/scss/blocks/_video.scss
@@ -1,4 +1,5 @@
 .video {
+  overflow: hidden;
   text-align: center;
   position: relative;
   &::after {
@@ -33,6 +34,9 @@
   top: 50%;
   transform: translate(-50%, -50%);
   transition: transform 0.2s ease-in;
+  @include mediaTabled {
+    transform: translate(-50%, -50%) scale(0.8);
+  }
 }
 
 .video__link:hover .video__icon {
